Fix tap effects on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,9 @@ app-root {
 
 * {
   box-sizing: border-box;
+
+  -webkit-tap-highlight-color: transparent;
+  user-select: none;
 }
 
 [routerLink],
